--- a/gulp-basic/package.json
+++ b/gulp-basic/package.json
@@ -1,35 +1,39 @@
 {
-  "name": "start-project",
+  "name": "starter-project",
   "version": "1.0.0",
-  "description": "starter project for new projects",
+  "description": "Starter project for new projects",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "tutorials"
+  ],
   "author": "John Gaffney",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^9.5.1",
+    "autoprefixer": "^9.6.1",
+    "browser-sync": "^2.26.7",
     "fancy-log": "^1.3.3",
-    "gulp": "^4.0.1",
-    "gulp-clean": "^0.4.0",
-    "gulp-compass": "^2.1.0",
+    "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.7.0",
-    "gulp-dart-sass": "^0.9.1",
-    "gulp-file-include": "^2.0.1",
-    "gulp-header": "^2.0.7",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^5.0.3",
+    "gulp-file-include": "^2.1.0",
+    "gulp-header-comment": "^0.6.1",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^6.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
-    "jquery": "^3.4.1",
-    "merge-stream": "^1.0.1",
+    "merge-stream": "^2.0.0",
     "node-sass": "^4.12.0",
+    "normalize-scss": "^7.0.1",
+    "time-stamp": "^2.2.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
