--- a/gulp-basic/package.json
+++ b/gulp-basic/package.json
@@ -16,6 +16,7 @@
   "author": "John Gaffney",
   "license": "MIT",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.2",
     "autoprefixer": "^9.6.1",
     "browser-sync": "^2.26.7",
     "fancy-log": "^1.3.3",
